hphp/hack/test/typecheck/nonnull/fc_enum_of_nonnull.php.exp
File "fc_enum_of_nonnull.php", line 3, characters 6-8:
Enums must be int or string or arraykey, not nonnull (Typing[4024])
